<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="Notifications">
        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="All Notifications"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="Permissions">
        <SwitchPreferenceCompat
            app:key="permissions"
            app:title="Permissions"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="Account">
        <Preference
            app:key="Switch Account"
            app:title="Switch Account"/>
        <Preference
            app:key="Sign Out"
            app:title="Sign Out"/>
    </PreferenceCategory>


</PreferenceScreen>