<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activities.SignInActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:src="@drawable/amazonlogo1"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_80"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_your_account"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_your_wish_list"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_and_reorder_past_purchase"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/track_your_purchase"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"
        />
    <TextView
        android:id="@+id/AlreadyCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_a_customer_sign_in"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/rectangle_bg"
        android:backgroundTint="@color/Yellow"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"

        />
    <TextView
        android:id="@+id/NewToAmazon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_to_amazon_in_create_an_account"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/rectangle_bg"
        android:backgroundTint="@color/grey"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        />
    <TextView
        android:id="@+id/SkipSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip_sign_in"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/rectangle_bg"
        android:backgroundTint="@color/grey"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        />

</LinearLayout>