<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ui.SaleOnAmazon.SaleOnAmazonFragmen"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/teal_700"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@drawable/rec_bg"
            android:layout_marginTop="5dp"
            android:paddingLeft="70dp"
            android:text="Register on the Amazon Seller App"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rec_bg">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/googleplay" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/appstore" />

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="Sell Your Product to customer across india"
            android:textColor="@color/white"
            android:textSize="35dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec_startselling_bg"
            android:backgroundTint="@color/Yellow"
            android:text="Start Selling"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="it only takes 15 minutes  to setup your account"
            android:textColor="@color/white"
            android:textSize="15dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/why_sell"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/desktop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/makes_sale"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/crores_of"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/wheelrs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/let_us"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/handle_support"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/LightTeal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/how_to"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/desktopwithamazonsymbol" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/_1_create"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/to_become"
                android:textColor="@color/black"
                android:textSize="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/checklist" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/_2_add_your_products"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/List_your_products"
                android:textColor="@color/black"
                android:textSize="10dp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/cash" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/_3_start_selling"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingLeft="70dp"
                android:text="@string/Payments_directly"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rec_bg"
                android:text="@string/click_here_to_learn"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">


                <Button
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rec_startselling_bg"
                    android:backgroundTint="@color/Yellow"
                    android:text="Start Selling"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/zishta"

                    />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</ScrollView>